--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,49 +17,38 @@ jobs:
     
     - name: Install ps2exe
       shell: pwsh
+      run: Install-Module -Name ps2exe -Force -Scope CurrentUser
+        
+    - name: Create standalone script
+      shell: pwsh
       run: |
-        Install-Module -Name ps2exe -Force -Scope CurrentUser
+        # Создаем standalone скрипт
+        $moduleContent = Get-Content "CPCertMigrator.psm1" -Raw -Encoding UTF8
+        
+        $standaloneScript = @"
+        #Requires -Version 5.1
+        # CryptoPro Certificate Migrator Standalone
+        
+        if (`$PSVersionTable.PSVersion.Major -lt 5) {
+            Write-Host 'ОШИБКА: Требуется PowerShell 5.1 или выше!' -ForegroundColor Red
+            Read-Host 'Нажмите Enter для выхода'
+            exit 1
+        }
+        
+        try {
+        $moduleContent
+            Start-CryptoProCertMigrator
+        } catch {
+            Write-Host "Ошибка: `$(`$_.Exception.Message)" -ForegroundColor Red
+            Read-Host 'Нажмите Enter для выхода'
+        }
+        "@
+        
+        $standaloneScript | Out-File "standalone.ps1" -Encoding UTF8
         
     - name: Build executable
       shell: pwsh
       run: |
-        Write-Host "Reading files..."
-        $moduleContent = Get-Content "CPCertMigrator.psm1" -Raw -Encoding UTF8
-        
-        Write-Host "Creating standalone launcher..."
-        $standaloneScript = @"
-#Requires -Version 5.1
-# CryptoPro Certificate Migrator Standalone v1.8.2
-
-param([switch]`$Version)
-
-if (`$Version) {
-    Write-Host "CryptoPro Certificate Migrator v1.8.2"
-    exit 0
-}
-
-if (`$PSVersionTable.PSVersion.Major -lt 5) {
-    Write-Host "ОШИБКА: Требуется PowerShell 5.1 или выше!" -ForegroundColor Red
-    Read-Host "Нажмите Enter для выхода"
-    exit 1
-}
-
-try {
-    # Встроенный модуль CPCertMigrator
-    $moduleContent
-    
-    # Запуск интерактивного меню
-    Start-CryptoProCertMigrator
-} catch {
-    Write-Host "Ошибка: `$(`$_.Exception.Message)" -ForegroundColor Red
-    Read-Host "Нажмите Enter для выхода"
-}
-"@
-        
-        Write-Host "Saving standalone script..."
-        $standaloneScript | Out-File "standalone.ps1" -Encoding UTF8
-        
-        Write-Host "Compiling to exe..."
         Import-Module ps2exe
         Invoke-ps2exe -inputFile "standalone.ps1" -outputFile "CPCertMigrator.exe" -noConsole:$false
         
