feat: упростил проект и обновил README
- Удалил избыточные файлы для упрощения проекта (GitHub Actions, скрипты сборки, CONTRIBUTING.md)
- Обновил README: добавил консольное меню сверху и информацию о .exe файле
- Упростил .gitignore и манифест модуля (убрал лишние метаданные)
- Оставил только необходимые файлы для простого и функционального проекта

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,12 @@
 *.ps1xml
 PSGetModuleInfo.xml
 *.nuspec
-
-# Build artifacts
-dist/
-out/
 *.nupkg
 
 # IDE
 .vscode/
 .vs/
 *.swp
-*.swo
 
 # OS
 .DS_Store
@@ -20,7 +15,14 @@ Thumbs.db
 
 # Logs
 *.log
+*Log.csv
 
 # Temporary files
 *.tmp
 *.temp
+
+# Certificate files (for testing)
+*.pfx
+CertExport/
+CertBackup/
+TempMigration*/
