docs: уточнил инструкции по запуску
- Обычный запуск .exe - для работы с сертификатами пользователя (CurrentUser)
- Запуск от имени администратора - для работы с сертификатами компьютера (LocalMachine)
- Обновил описания в README и GitHub Actions workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,9 @@ jobs:
           
           ### Использование
           1. Скачайте CPCertMigrator.exe
-          2. Запустите двойным кликом (от имени администратора при первом запуске)
+          2. Запустите двойным кликом:
+             - **Обычный запуск** - для работы с сертификатами пользователя (CurrentUser)
+             - **От имени администратора** - для работы с сертификатами компьютера (LocalMachine)
           3. При первом запуске модуль автоматически установится из PowerShell Gallery
           4. Следуйте инструкциям в меню
           
